static/css/style.css
/* General styles for the page */
body {
    font-family: Arial, sans-serif;
}

/* Styles for the header */
header {
    text-align: center;
    padding: 1rem;
    font-weight: bold;
}
header h1 {
    font-weight: bold;
}
/* Styles for the main section */
main {
    padding: 1rem;
}

/* Styles for the form */
form {
    margin-bottom: 1.5rem;
}

/* Styles for toolbar buttons */
.toolbar {
    margin-bottom: 1rem;
}

.toolbar button {
    margin-right: 0.5rem;
}

/* Styles for the reply form */
.reply-form {
    display: none;
}
div.card.mt-3 {
    margin-left: 4%;
}
/* Styles for the table */
.table {
    margin-bottom: 1rem;
}

.table th {
    cursor: pointer;
}

/* Styles for pagination */
.pagination {
    justify-content: center;
}

/* Styles for the "go to top" button */
#go-to-top-btn {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background: #007bff;
    color: white;
    border: none;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

#go-to-top-btn ion-icon {
    font-size: 24px;
}

/* Styles for images */
img {
    transition: all 0.3s ease; /* Smooth transition for all changes */
    border-radius: 8px; /* Rounded corners */
}

/* Border for images on hover */
img:hover {
    border: 5px solid #007bff; /* Border width and color */
    box-shadow: 0 0 15px rgba(0, 123, 255, 0.5); /* Shadow to enhance the effect */
}

